--- a/AruhazFeladat/AruhazFeladat.csproj
+++ b/AruhazFeladat/AruhazFeladat.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BasicTests.cs" />
     <Compile Include="BundleDiscount.cs" />
     <Compile Include="IDiscount.cs" />
+    <Compile Include="PayForTwoDiscount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Supermarket.cs" />
   </ItemGroup>
